<resources>
    <string name="app_name">WGU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Antonio Sierra</string>
    <string name="nav_header_subtitle">Software Development - B.S.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_text" translatable="false">Welcome to the WGU app. Use the side navigation to view and navigate through your terms, courses and assessments.</string>

    <string name="menu_Terms">Terms</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_assessments">Assessments</string>
    <string name="menu_mentors">Mentors</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_Home">Home</string>

    <string name="sharesms">Share via SMS</string>
    <string name="shareemail">Share via Email</string>
    <string name="sharesettings">Share Settings</string>

    <!-- Button text -->
    <string name="termButton">View Terms</string>
    <string name="term_editor_button">Term Editor</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>